<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo" />

        <EditText
            android:id="@+id/etRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:layout_alignParentLeft="true"
            android:backgroundTint="@color/yellow"
            android:ems="10"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email_number"/>

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterUsername"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/yellow"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterPassword"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/yellow"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btnRegisterRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterConfirmPassword"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:text="@string/register" />

            <Button
                android:id="@+id/btnRegisterCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etRegisterConfirmPassword"
                android:layout_marginLeft="260dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>