<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="116dp"
                android:layout_height="111dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/logo" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="#FFC107"
                android:hint="@string/email_number"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="#FFC107"
                android:drawableEnd="@drawable/passwrd"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:drawableRight="@drawable/passwrd" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="328dp"
                android:layout_height="45dp"
                android:layout_below="@+id/reset_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="#FFC107"
                android:drawableEnd="@drawable/passwrd"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:drawableRight="@drawable/passwrd" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_password"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                app:backgroundTint="#FFC107"
                android:text="@string/register"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_password"
                android:layout_marginStart="230dp"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="25dp"
                android:text="@string/cancel"
                app:backgroundTint="#FFC107" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>