<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_gravity="center"
                android:background="@drawable/logo" />

            <EditText
                android:id="@+id/etLoginUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:backgroundTint="@color/yellow"
                android:ems="15"
                android:hint="@string/email_number"
                android:inputType="textPersonName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLoginPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:ems="15"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvLoginSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#3F51B5"
                        android:text="@string/sing_up" />

                    <TextView
                        android:id="@+id/tvLoginForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#3F51B5"
                        android:layout_weight="1"
                        android:text="@string/Forgot_password"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnLoginLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="LOGIN" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/use"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn_twitter"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/twitter"/>

                <ImageButton
                    android:id="@+id/btn_facebook"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/facebook" />

                <ImageButton
                    android:id="@+id/btn_google"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/google"/>
                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>